ответ на коммент

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="post-container">
-        <h1>Привет! </h1>
+        <h1>Привет!</h1>
         <img src="istockphoto-1793203185-2048x2048.img" alt="Картинка поста" id="post-image">
         <p>Разнообразие подводного мира</p>
     </div>
@@ -16,10 +16,11 @@
     <div id="comments-container"></div>
     
     <div id="add-comment">
-        <input type="text" id="comment-input" placeholder="Добавьте комментарий...">
+        <input type="text" id="author-input" placeholder="Ваше имя..." required>
+        <input type="text" id="comment-input" placeholder="Добавьте комментарий..." required>
         <button id="add-comment-button">Добавить комментарий</button>
     </div>
     
-    <script src="script.js"></script>
+    <script src="script.js"></script> 
 </body>
 </html>
