исправила косяки коментариев

--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Комментарии</title>
-</head>
-<body>
-    <input type="text" id="author-input" placeholder="Ваше имя...">
-    <input type="text" id="comment-input" placeholder="Ваш комментарий...">
-    <button id="add-comment-button">Добавить комментарий</button>
-    <div id="comments-container"></div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Пост с комментариями</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div id="post-container">
+            <h1>Привет!</h1>
+            <img
+                src="istockphoto-1793203185-2048x2048.img"
+                alt="Картинка поста"
+                id="post-image"
+            />
+            <p>Разнообразие подводного мира</p>
+        </div>
 
-    <script type="module" src="./index.js"></script>
-</body>
+        <div id="comments-container"></div>
+
+        <div id="add-comment">
+            <input
+                type="text"
+                id="author-input"
+                placeholder="Ваше имя..."
+                required
+            />
+            <input
+                type="text"
+                id="comment-input"
+                placeholder="Добавьте комментарий..."
+                required
+            />
+            <button id="add-comment-button">Добавить комментарий</button>
+        </div>
+
+        <script type="module" src="./index.js"></script>
+    </body>
 </html>
